Make last modified date the latest git commit time; fix grammar and broken link

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 title: "Jekyll Actions Demo"
+
+plugins:
+  - jekyll-last-modified-at
+
+# Optional. The default date format, used if none is specified in the tag.
+last-modified-at:
+    date-format: '%B-%d-%y'
